@@ -1,5 +1,11 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. загрузка нода из hrd-sets вынесена в отдельную функцию. Понадобится для подгрузки
+	 своих тем.
+	2. docbuilder и catalog вынесены из членов класса ParserFactory. Удаляем их сразу как прочитали.
+
+#Revision: 1599
+	#Author: ctapmex Date: 2010-10-27 17:18:17 +0600 (Ср, 27 окт 2010)
 	1. при пустом значении параметра log-location в catalog.xml пораждалось исключение.
 	 Зачем? проверим сразу. и логи в отладчике чисты.
 
